@@ -8,6 +8,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed a crash when trying to open the calculator dialog
     - Fixed that 0-ed items were still being shown on Districts
+    - Fixed that putting items into a combinator would always add them as per second instead of per current timescale
 
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.6
